Initial content edits.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>How I Made This Presentation</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -38,15 +38,81 @@
 			<div class="slides">
 
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>HTML Presentations Made Easy</h3>
+					<h1>How I Made This Presentation</h1>
+					<h3>Using the Tools of the Web to Present About It.</h3>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+						<small>
+							Sven Aas<br/>
+							Lead Web Application Developer<br />
+							Mount Holyoke College<br/>
+							<a href="http://twitter.com/svenaas">@svenaas</a>
+						</small>
 					</p>
+					<aside class="notes">
+						My name is Sven Aas. I work at Mount Holyoke College, up in Massachusetts, where I develop and support web applications.
+					</aside>
 				</section>
 
 				<section>
-					<h2>Heads Up</h2>
+
+					<section>
+						<h1>My Presentation History</h1>
+						<aside class="notes">
+							I went to my first HighEdWeb conference back in 2007 and I was powerfully impressed by the conference, the community, and the presentations. Presentations weren't really a big part of my life, but I knew I wanted to be a part of this thing and I made up my mind to submit a proposal the next year if I'd be able to attend the conference.
+						</aside>
+					</section>
+
+					<section>
+						<h2>HighEdWeb 2008</h2>
+						<h3>Higher Ed on Rails</h3>
+						<p>Powerpoint</p>
+						<aside class="notes">
+							As it turned out I was able to go, and my proposal was accepted. I prepared my talk, Higher Ed on Rails, in Powerpoint in accordance with the ancient form. There were a lot of screenshots and a lot of bullets and maybe a few transitions, and everything worked ok.
+						</aside>
+					</section>
+
+					<section>
+						<h2>Then</h2>
+						<ul>
+							<li>HighEdWeb 2009 <small>(missed it)</small></li>
+							<li>HighEdWeb 2010 <small>(didn't present)</small></li>
+						</ul>
+						<p>But meanwhile ...</p>
+						<aside class="notes">
+							That was 2008. I wasn't able to attend in 2009 so I missed all the excitement (dropshadow slide). In 2010 I was there but didn't present.
+						</aside>
+					</section>
+
+					<section>
+						<h2>Back Home</h2>
+						<dl>
+							<dt>DEDCC</dt>
+							<dd>Digital Environment Development and Coordinating Committee (DEDCC)</dd>
+						</dl>
+						<p>Keynote</p>
+						<aside class="notes">
+							I presented back home, though. I was asked to speak about HTML5 to a group called DEDCC and I wanted things to look good. I'd been presenting more back at home, mostly in PowerPoint, which I never liked much, and several times more recently in Google Presentations, which as you know (or should) offer a lot of advantages for collaboration. But as nice as this tool is in various ways, it didn't look great. It let you use the web, but in a lowest-common-denominator sort of way. Now I'm no designer but I wanted my presentations to look better without going through excruciating discomfort to get there. So I tried Apple's Keynote. This was definitely a better tool. It suffers from weird little limitations of its own, but it tended to snap things to where I wanted them, put options where I expected them, and generally feel less frustrating. I had fun with the talk, and it looked better than anything else I'd done.
+						</aside>
+					</section>
+
+					<section>
+						<h2>HighEdWeb 2011</h2>
+						<h3>Swinging with Sinatra</h3>
+						<p>Powerpoint</p>
+						<aside class="notes">
+							HighEdWeb 2011 was busy conference for me. I did too much. I volunteered for a few things (registration, band), I presented a poster, and I gave another 45-minute talk. This time I wanted to do something more dynamic and exciting, a live programming demonstration. As luck would have it it was a little more exciting than I would have liked, as my computer (yes, this very computer) let me down (core dump slide) mid stream. This proved a poplar diversion, and I got to repeat it two more times. One thing I promised myself was that next time I'd deliver a talk I could present in jeans.
+						</aside>
+					</section>
+
+					<section>
+						<h2>HighEdWeb 2012</h2>
+						<h3>You Can Convert!</h3>
+						<aside class="notes">
+							In 2012 Jason and I collaborated on a talk, and because we wanted it to look nice we used Keynote. Now this time the tool really got in the way. Jason knows a lot more about typography than I do, but I know Keynote better. Our collaboration consisted of sharing some notes, and then working on a single Keynote file in a shared Dropbox folder, being careful not to overwrite each others changes. We know each other well and we got through this ok but it was really the last straw.
+						</aside>
+					</section>
+				</section>
+				<section>
 					<p>
 						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
 						support for CSS 3D transforms to see it in its full glory.
