Introductory slides and notes.

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 					</aside>
 				</section>
 
+				<!-- My Presentation History -->
 				<section>
-
 					<section>
 						<h1>My Presentation History</h1>
 						<aside class="notes">
@@ -110,6 +110,62 @@
 						<aside class="notes">
 							In 2012 Jason and I collaborated on a talk, and because we wanted it to look nice we used Keynote. Now this time the tool really got in the way. Jason knows a lot more about typography than I do, but I know Keynote better. Our collaboration consisted of sharing some notes, and then working on a single Keynote file in a shared Dropbox folder, being careful not to overwrite each others changes. We know each other well and we got through this ok but it was really the last straw.
 						</aside>
+					</section>
+				</section>
+
+				<!-- Available Presentation Tools -->
+				<section>
+					<section>
+						<h2>Available Presentation Tools</h2>
+						<h3>(and their limitations)</h3>
+						<ol>
+							<li>Conventional (Powerpoint, Keynote)</li>
+							<li>Cloud-based (Google)</li>
+							<li>Flash-based (Prezi)</li>
+							<li>What about the web?</li>
+						</ol>
+						<aside class="notes">
+							Conventional presentation tools offer cryptic and shifting interfaces and little or no collaboration functionality.
+							Google's presentation tool offers much better collaboration support but limited presentational flexibility.
+							Some people were starting to use Prezi, of course, and that was impressive the first time I saw it, but it doesn't work for everything and it has other drawbacks.
+						</aside>
+					</section>
+
+					<section>
+						<h2>Version Control</h2>
+						<h3>What about that, huh?</h3>
+						<aside class="notes">
+							For a dozen years by this point I'd been managing source code in version control systems. First StarTeam, then CVS, SVN, and Git. I invested a lot of time working with these tools, and relied upon them to care for the output of the hours (and the years) I spent at the keyboard doing my main job.
+						</aside>
+					</section>
+
+					<section>
+						<h2>What About the Web?</h2>
+						<aside class="notes">
+							That main job, meanwhile, which had always been one kind of programming or another, had for years been web programming, and by this point for me that meant blue-beanie standards-based web programming, with CSS, yo.
+						</aside>
+					</section>
+
+					<section>
+						<h2>What About the Web?</h2>
+						<aside class="notes">
+							That main job, meanwhile, which had always been one kind of programming or another, had for years been web programming, and by this point for me that meant blue-beanie standards-based web programming, with CSS, yo.
+						</aside>
+					</section>
+
+					<section>
+						<h2>It turns out there are options.</h2>
+						<aside class="nodes">
+							[Lacy's talk in 2012]
+							[That's what I'm going to do next time]
+						</aside>
+					</section>
+				</section>
+
+				<!-- Web-based Presentation Tools -->
+				<section>
+					<section>
+						<h2>It turns out there are options.</h2>
 					</section>
 				</section>
 				<section>
