--- a/index.html
+++ b/index.html
@@ -165,300 +165,266 @@
 				<!-- Web-based Presentation Tools -->
 				<section>
 					<section>
-						<h2>It turns out there are options.</h2>
+						<h1>Web-based Presentation Tools</h1>
+					</section>
+
+					<section>
+						<h2>The Basic Idea</h2>
+						<h3>HTML</h3>
+						<p>HTML is used to structure content and mark it up, often semantically</p>
+					</section>
+
+					<section>
+						<h2>The Basic Idea</h2>
+						<h3>CSS</h3>
+						<p>CSS is used to provide presentation styling.</p>
+					</section>
+
+					<section>
+						<h2>The Basic Idea</h2>
+						<h3>JavaScript</h3>
+						<p>JavaScript is used to add behavioral elements</p>
+					</section>
+
+					<section>
+						<h2>Sound familiar?</h2>
+					</section>
+
+					<section>
+						<h2>What's New?</h2>
+						<h3>CSS2/3</h3>
+					</section>
+
+					<section>
+						<h2>Tantek Çelik</h2>
+					</section>
+
+				</section>
+
+				<!-- S5 -->
+				<section>
+					<section>
+						<h1>S5</h1>
+						<h3>Eric Meyer</h3>
+						<ul>
+							<li>XHTML</li>
+							<li>XOXO</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>S5</h2>
+						<h3>Pros:</h2>
+							<li>Printable</li>
+							<li>Accessible</li>
+							<li>Semantic</li>
+						</ul>
+						<h3>Cons:</h2>
+							<li>Fairly Static</li>
+							<li>Single URL</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>S5</h2>
+						<h3>Eric Meyer</h3>
+						<ul>
+							<li>XHTML</li>
+							<li>XOXO</li>
+						</ul>
 					</section>
 				</section>
-				<section>
-					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
-					</p>
 
+				<!-- Deck.js -->
+				<section>
+					<section>
+						<h1>Deck.js</h1>
+					</section>
+				</section>
+
+				<!-- Reveal.js -->
+				<section>
+					<section>
+						<h1>Reveal.js</h1>
+					</section>
+
+					<section>
+						<h2>Transitions</h2>
+					</section>
+
+					<section>
+						<h2>Internal Links</h2>
+					</section>
+
+					<section>
+						<h2>Markdown</h2>
+					</section>
+
+					<section>
+						<h2>Code Highlighting</h2>
+					</section>
+
+					<section>
+						<h2>Overview</h2>
+					</section>
+
+					<section>
+						<h2>Mobile</h2>
+					</section>
+
+					<section>
+						<h2>PDF Export</h2>
+					</section>
+
+					<section>
+						<h2>Pause</h2>
+					</section>
+
+					<section>
+						<h2>Theming - SASS</h2>
+					</section>
+
+					<section>
+						<h2>Remote</h2>
+					</section>
+
+					<section>
+						<h2>Multiplex</h2>
+					</section>
+
+					<section>
+						<h2>Node.js</h2>
+					</section>
+				</section>
+
+				<!-- A few others -->
+				<section>
+					<section>
+						<h1>A few other options</h1>
+					</section>
+
+					<section>
+						<h2>Parallax scrolling</h2>
+					</section>
+
+					<section>
+						<h2>Prezi-style effects</h2>
+					</section>
+
+					<section>
+						<h2>jQuery</h2>
+					</section>
+				</section>
+
+				<!-- Things to look for when choosing a platform -->
+				<section>
+					<section>
+						<h1>Things to Look For</h1>
+						<h3>When Choosing a Platform</h3>
+					</section>
+
+					<section>
+						<h2>Navigation</h2>
+						<ul>
+							<li>Keyboard</li>
+							<li>Mouse</li>
+							<li>History</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>Adaptability</h2>
+						<ul>
+							<li>Printable</li>
+							<li>Accessible</li>
+							<li>Exportable (PDF)</li>
+							<li>Semantics (XOXO)</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>Adaptability</h2>
+						<ul>
+							<li>Printable</li>
+							<li>Accessible</li>
+							<li>Exportable</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>Presenter Tools</h2>
+						<ul>
+							<li>Overview</li>
+							<li>Fullscreen</li>
+							<li>Remote</li>
+							<li>Pause</li>
+							<li>Multiplex</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>Community</h2>
+					</section>
+
+					<section>
+						<h2>Content</h2>
+						<ul>
+							<li>Online Editor</li>
+							<li>Markdown</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>Style</h2>
+						<ul>
+							<li>Themes and Theming</li>
+							<li>Flexibility</li>
+							<li>Code Highlighting</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>Behavior</h2>
+						<ul>
+							<li>Transitions</li>
+							<li>Animation</li>
+							<li>API / Events</li>
+						</ul>
+					</section>
+
+				</section>
+
+				<section>
+					<h2>This is all <em>so</em> great!</h2>
+					<ul>
+						<li>Version control? Sure!</li>
+						<li>Collaboration? Why not!</li>
+					</ul>
 					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
-				</section>
+						And of course all this works in version control. It's styled with CSS. It gets its behavior from CSS and JS. It only uses the same technologies we use to do everything else.
 
-				<!-- Example of nested vertical slides -->
-				<section>
-					<section>
-						<h2>Vertical Slides</h2>
-						<p>
-							Slides can be nested inside of other slides,
-							try pressing <a href="#" class="navigate-down">down</a>.
-						</p>
-						<a href="#" class="image navigate-down">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 1</h2>
-						<p>Press down or up to navigate.</p>
-					</section>
-					<section>
-						<h2>Basement Level 2</h2>
-						<p>Cornify</p>
-						<a class="test" href="http://cornify.com">
-							<img width="280" height="326" src="https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif" alt="Unicorn">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 3</h2>
-						<p>That's it, time to go back up.</p>
-						<a href="#/2" class="image">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);">
-						</a>
-					</section>
+						Collaboration? Why not!
+					</h2>
 				</section>
 
 				<section>
-					<h2>Point of View</h2>
+					<h2>Would I go back?</h2>
+					<h3>to Powerpoint/Keynote?</h3>
+					<p>For delivery specifically in those formats</p>
+					<h3>to Google Presentations?</h3>
+					<p>For something small and simple</p>
+					<aside class="notes">
+
+				</section>
+
+				<section>
+					<h1>Thank you!</h1>
+					<h2>Stay in touch:</h2>
 					<p>
-						Press <strong>ESC</strong> to enter the slide overview. Hold down alt and click on any element to zoom in on it using <a href="http://lab.hakim.se/zoom-js">zoom.js</a>. Alt + click anywhere to zoom back out.
+						Sven Aas, Mount Holyoke College<br/>
+						saas at mtholyoke dot edu<br/>
+						<a href="http://twitter.com/svenaas">@svenaas</a>
 					</p>
-				</section>
-
-				<section>
-					<h2>rvl.io</h2>
-					<p>
-						If you don't like writing slides in HTML you can use the online editor <a href="http://www.rvl.io" target="_blank">rvl.io</a>.
-					</p>
-				</section>
-
-				<section>
-					<h2>Works in Mobile Safari</h2>
-					<p>
-						Try it out! You can swipe through the slides and pinch your way to the overview.
-					</p>
-				</section>
-
-				<section>
-					<h2>Marvelous Unordered List</h2>
-					<ul>
-						<li>No order here</li>
-						<li>Or here</li>
-						<li>Or here</li>
-						<li>Or here</li>
-					</ul>
-				</section>
-
-				<section>
-					<h2>Fantastic Ordered List</h2>
-					<ol>
-						<li>One is smaller than...</li>
-						<li>Two is smaller than...</li>
-						<li>Three!</li>
-					</ol>
-				</section>
-
-				<section data-markdown>
-					<script type="text/template">
-						## Markdown support
-
-						For those of you who like that sort of thing. Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-
-							<section data-markdown>
-							  ## Markdown support
-
-							  For those of you who like that sort of thing.
-							  Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-							</section>
-					</script>
-				</section>
-
-				<section id="transitions">
-					<h2>Transition Styles</h2>
-					<p>
-						You can select from different transitions, like: <br>
-						<a href="?transition=cube#/transitions">Cube</a> -
-						<a href="?transition=page#/transitions">Page</a> -
-						<a href="?transition=concave#/transitions">Concave</a> -
-						<a href="?transition=zoom#/transitions">Zoom</a> -
-						<a href="?transition=linear#/transitions">Linear</a> -
-						<a href="?transition=fade#/transitions">Fade</a> -
-						<a href="?transition=none#/transitions">None</a> -
-						<a href="?#/transitions">Default</a>
-					</p>
-				</section>
-
-				<section id="themes">
-					<h2>Themes</h2>
-					<p>
-						Reveal.js comes with a few themes built in: <br>
-						<a href="?theme=sky#/themes">Sky</a> -
-						<a href="?theme=beige#/themes">Beige</a> -
-						<a href="?theme=simple#/themes">Simple</a> -
-						<a href="?theme=serif#/themes">Serif</a> -
-						<a href="?theme=night#/themes">Night</a> -
-						<a href="?#/themes">Default</a>
-					</p>
-					<p>
-						<small>
-							* Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the <code>&lt;head&gt;</code> using a <code>&lt;link&gt;</code>.
-						</small>
-					</p>
-				</section>
-
-				<section>
-					<section data-state="alert">
-						<h2>Global State</h2>
-						<p>
-							Set <code>data-state="something"</code> on a slide and <code>"something"</code>
-							will be added as a class to the document element when the slide is open. This lets you
-							apply broader style changes, like switching the background.
-						</p>
-						<a href="#" class="image navigate-down">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
-					</section>
-					<section data-state="blackout">
-						<h2>"blackout"</h2>
-						<a href="#" class="image navigate-down">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
-					</section>
-					<section data-state="soothe">
-						<h2>"soothe"</h2>
-						<a href="#" class="image navigate-next">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(-90deg);">
-						</a>
-					</section>
-				</section>
-
-				<section data-state="customevent">
-					<h2>Custom Events</h2>
-					<p>
-						Additionally custom events can be triggered on a per slide basis by binding to the <code>data-state</code> name.
-					</p>
-					<pre><code contenteditable style="font-size: 18px; margin-top: 20px;">Reveal.addEventListener( 'customevent', function() {
-	console.log( '"customevent" has fired' );
-} );
-					</code></pre>
-				</section>
-
-				<section>
-					<h2>Clever Quotes</h2>
-					<p>
-						These guys come in two forms, inline: <q cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-						The nice thing about standards is that there are so many to choose from</q> and block:
-					</p>
-					<blockquote cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-						For years there has been a theory that millions of monkeys typing at random on millions of typewriters would
-						reproduce the entire works of Shakespeare. The Internet has proven this theory to be untrue.
-					</blockquote>
-				</section>
-
-				<section>
-					<h2>Pretty Code</h2>
-					<pre><code contenteditable>
-function linkify( selector ) {
-  if( supports3DTransforms ) {
-
-    var nodes = document.querySelectorAll( selector );
-
-    for( var i = 0, len = nodes.length; i &lt; len; i++ ) {
-      var node = nodes[i];
-
-      if( !node.className ) ) {
-        node.className += ' roll';
-      }
-    };
-  }
-}
-					</code></pre>
-					<p>Courtesy of <a href="http://softwaremaniacs.org/soft/highlight/en/description/">highlight.js</a>.</p>
-				</section>
-
-				<section>
-					<h2>Intergalactic Interconnections</h2>
-					<p>
-						You can link between slides internally,
-						<a href="#/2/3">like this</a>.
-					</p>
-				</section>
-
-				<section>
-					<section>
-						<h2>Fragmented Views</h2>
-						<p>Hit the next arrow...</p>
-						<p class="fragment">... to step through ...</p>
-						<ol>
-							<li class="fragment"><code>any type</code></li>
-							<li class="fragment"><em>of view</em></li>
-							<li class="fragment"><strong>fragments</strong></li>
-						</ol>
-
-						<aside class="notes">
-							This slide has fragments which are also stepped through in the notes window.
-						</aside>
-					</section>
-					<section>
-						<h2>Fragment Styles</h2>
-						<p>There's a few styles of fragments, like:</p>
-						<p class="fragment grow">grow</p>
-						<p class="fragment shrink">shrink</p>
-						<p class="fragment roll-in">roll-in</p>
-						<p class="fragment fade-out">fade-out</p>
-						<p class="fragment highlight-red">highlight-red</p>
-						<p class="fragment highlight-green">highlight-green</p>
-						<p class="fragment highlight-blue">highlight-blue</p>
-					</section>
-				</section>
-
-				<section>
-					<h2>Spectacular image!</h2>
-					<a class="image" href="http://lab.hakim.se/meny/" target="_blank">
-						<img width="320" height="299" src="http://s3.amazonaws.com/hakim-static/portfolio/images/meny.png" alt="Meny">
-					</a>
-				</section>
-
-				<section>
-					<h2>Export to PDF</h2>
-					<p>Presentations can be <a href="https://github.com/hakimel/reveal.js#pdf-export">exported to PDF</a>, below is an example that's been uploaded to SlideShare.</p>
-					<iframe id="slideshare" src="http://www.slideshare.net/slideshow/embed_code/13872948" width="455" height="356" style="margin:0;overflow:hidden;border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen> </iframe>
-					<script>
-						document.getElementById('slideshare').attributeName = 'allowfullscreen';
-					</script>
-				</section>
-
-				<section>
-					<h2>Take a Moment</h2>
-					<p>
-						Press b or period on your keyboard to enter the 'paused' mode. This mode is helpful when you want to take distracting slides off the screen
-						during a presentation.
-					</p>
-				</section>
-
-				<section>
-					<h2>Stellar Links</h2>
-					<ul>
-						<li><a href="https://github.com/hakimel/reveal.js">Source code on GitHub</a></li>
-						<li><a href="http://hakim.se/projects/reveal-js">Leave feedback on my site</a></li>
-						<li><a href="http://twitter.com/hakimel">Follow me on Twitter</a></li>
-					</ul>
-				</section>
-
-				<section>
-					<h2>It's free</h2>
-					<p>
-						reveal.js and <a href="http://www.rvl.io">rvl.io</a> are entirely free but if you'd like to support the projects you can donate below.
-						Donations will go towards hosting and domain costs.
-					</p>
-					<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-						<input type="hidden" name="cmd" value="_donations">
-						<input type="hidden" name="business" value="hakim.elhattab@gmail.com">
-						<input type="hidden" name="lc" value="US">
-						<input type="hidden" name="item_name" value="reveal.js / rvl.io">
-						<input type="hidden" name="no_note" value="0">
-						<input type="hidden" name="currency_code" value="USD">
-						<input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_LG.gif:NonHostedGuest">
-						<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-					</form>
-				</section>
-
-				<section>
-					<h1>THE END</h1>
-					<h3>BY Hakim El Hattab / hakim.se</h3>
 				</section>
 
 			</div>
