Added hewebFL presentation hashtag.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 							<a href="http://twitter.com/svenaas">@svenaas</a>
 						</small>
 					</p>
+					<p><a href="https://twitter.com/search/realtime?q=%23dpfl3">#dpfl3</a></p>
 					<aside class="notes">
 						My name is Sven Aas. I work at Mount Holyoke College, up in Massachusetts, where I develop and support web applications.
 					</aside>
