Fixed a few markup errors and added one more slide from my notes.

--- a/index.html
+++ b/index.html
@@ -215,12 +215,14 @@
 
 					<section>
 						<h2>S5</h2>
-						<h3>Pros:</h2>
+						<h3>Pros:</h3>
+						<ul>
 							<li>Printable</li>
 							<li>Accessible</li>
 							<li>Semantic</li>
 						</ul>
-						<h3>Cons:</h2>
+						<h3>Cons:</h3>
+						<ul>
 							<li>Fairly Static</li>
 							<li>Single URL</li>
 						</ul>
@@ -405,7 +407,7 @@
 						And of course all this works in version control. It's styled with CSS. It gets its behavior from CSS and JS. It only uses the same technologies we use to do everything else.
 
 						Collaboration? Why not!
-					</h2>
+					</aside>
 				</section>
 
 				<section>
@@ -415,7 +417,15 @@
 					<h3>to Google Presentations?</h3>
 					<p>For something small and simple</p>
 					<aside class="notes">
+						Would I go back to Powerpoint or Keynote? Sure, if I have to make something available in those formats for someone else. And I'd use Google if I had a lower bar for something small and simple. But for something I'm going to spend time on, why not do it this way? I'm not promising that it's easier to get your theme working the way you want, but you're doing it with CSS. Maybe you're already great at this. Maybe not. But either way, and
+					</aside>
+				</section>
 
+				<section>
+					<h2>Better to go forward</h2>
+					<aside class="notes">
+						Best of all: your presentation design work can now help you get better with the tools of your profession, instead of drawing you away from them and making you fight with the user interface of another office suite.
+					</aside>
 				</section>
 
 				<section>
