--- a/index.html
+++ b/index.html
@@ -308,14 +308,27 @@
 
 					<section>
 						<h2>Parallax scrolling</h2>
+						<p>Flowtime</p>
+						<small><a href="https://github.com/marcolago/flowtime.js">https://github.com/marcolago/flowtime.js</a></small>
+						<small><a href="http://flowtime-js.marcolago.com/#/section-6/page-1" target="_blank">Parallax example</a></small>
+						<aside class="notes">
+							Follow example link and click through to see the parallax effect demonstrated.
+						</aside>
 					</section>
 
 					<section>
 						<h2>Prezi-style effects</h2>
+						<p><a href="http://bartaz.github.com/impress.js/" target="_blank">Impress<a></p>
+						<small><a href="https://github.com/bartaz/impress.js">https://github.com/bartaz/impress.js</a></small>
+						<aside class="notes">
+							Follow "Impress" link for a quick click-through of the Impress demo.
+						</aside>
 					</section>
 
 					<section>
 						<h2>jQuery</h2>
+						<p>Fathom</p>
+						<small><a href="https://github.com/markdalgleish/fathom">https://github.com/markdalgleish/fathom</a></small>
 					</section>
 				</section>
 
@@ -333,6 +346,11 @@
 							<li>Mouse</li>
 							<li>History</li>
 						</ul>
+						<aside class="notes">
+							In general all of these tools allow you to control your presentation with the keyboard in a reasonable (and usually familiar) way, though the details vary, as they do with mouse control options.
+
+							You are, however, in a browser, and the behavior of the back button is a bit different from one presentation tool to another. Test this out of it matters to you.
+						</aside>
 					</section>
 
 					<section>
@@ -343,6 +361,9 @@
 							<li>Exportable (PDF)</li>
 							<li>Semantics (XOXO)</li>
 						</ul>
+						<aside class="notes">
+
+						</aside>
 					</section>
 
 					<section>
@@ -426,6 +447,10 @@
 					<aside class="notes">
 						Best of all: your presentation design work can now help you get better with the tools of your profession, instead of drawing you away from them and making you fight with the user interface of another office suite.
 					</aside>
+				</section>
+
+				<section>
+						<img style="height: 100%" src="img/mind_pump.jpg" alt="Mind Pump">
 				</section>
 
 				<section>
