Example images, slide content, and more images.

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 
-				<section>
+				<section data-transition="none">
 					<h1>How I Made This Presentation</h1>
-					<h3>Using the Tools of the Web to Present About It.</h3>
+					<h3>Using the Tools of the Web <br/>to Present About It.</h3>
 					<p>
 						<small>
 							Sven Aas<br/>
@@ -55,7 +55,7 @@
 				</section>
 
 				<!-- My Presentation History -->
-				<section>
+				<section data-transition="none">
 					<section>
 						<h1>My Presentation History</h1>
 						<aside class="notes">
@@ -63,53 +63,74 @@
 						</aside>
 					</section>
 
-					<section>
+					<section data-transition="none">
 						<h2>HighEdWeb 2008</h2>
 						<h3>Higher Ed on Rails</h3>
 						<p>Powerpoint</p>
+						<img src="img/higheredonrails.png" />
 						<aside class="notes">
 							As it turned out I was able to go, and my proposal was accepted. I prepared my talk, Higher Ed on Rails, in Powerpoint in accordance with the ancient form. There were a lot of screenshots and a lot of bullets and maybe a few transitions, and everything worked ok.
 						</aside>
 					</section>
 
-					<section>
+					<section data-transition="none">
 						<h2>Then</h2>
 						<ul>
-							<li>HighEdWeb 2009 <small>(missed it)</small></li>
-							<li>HighEdWeb 2010 <small>(didn't present)</small></li>
+							<li class="fragment">HighEdWeb 2009 <small class="hella fragment roll-in">(missed it)</small></li>
+							<li class="fragment">HighEdWeb 2010 <small class="fragment">(didn't present)</small></li>
 						</ul>
-						<p>But meanwhile ...</p>
+						<p class="fragment">But meanwhile ...</p>
 						<aside class="notes">
 							That was 2008. I wasn't able to attend in 2009 so I missed all the excitement (dropshadow slide). In 2010 I was there but didn't present.
 						</aside>
 					</section>
 
-					<section>
+					<section data-transition="none">
 						<h2>Back Home</h2>
-						<dl>
-							<dt>DEDCC</dt>
-							<dd>Digital Environment Development and Coordinating Committee (DEDCC)</dd>
-						</dl>
-						<p>Keynote</p>
+						<h3>HighEdWeb 2012 Report</h3>
+						<p>Google Presentation</p>
+						<img src="img/heweb10.png" />
 						<aside class="notes">
-							I presented back home, though. I was asked to speak about HTML5 to a group called DEDCC and I wanted things to look good. I'd been presenting more back at home, mostly in PowerPoint, which I never liked much, and several times more recently in Google Presentations, which as you know (or should) offer a lot of advantages for collaboration. But as nice as this tool is in various ways, it didn't look great. It let you use the web, but in a lowest-common-denominator sort of way. Now I'm no designer but I wanted my presentations to look better without going through excruciating discomfort to get there. So I tried Apple's Keynote. This was definitely a better tool. It suffers from weird little limitations of its own, but it tended to snap things to where I wanted them, put options where I expected them, and generally feel less frustrating. I had fun with the talk, and it looked better than anything else I'd done.
+							I'd been presenting more back at home, though, mostly in PowerPoint, which I never liked much, and several times more recently in Google Presentations, including this example reporting some of the lessons learned at HighEdWeb 2010. As you know (or should) Google's tools offer a lot of advantages for collaboration.
+
+							But as nice as this tool is in various ways, it doesn't look great. It let you use the web, but in a lowest-common-denominator sort of way. It offers some conveniences but denies others.
+
+							So I tried Apple's Keynote. This was definitely a better tool. It suffers from weird little limitations of its own, but it tended to snap things to where I wanted them, put options where I expected them, and generally feel less frustrating. I had fun with the talk, and it looked better than anything else I'd done.
 						</aside>
 					</section>
 
-					<section>
+					<section data-transition="none">
+						<h2>Back Home</h2>
+						<h3>HTML5</h3>
+						<p>Keynote</p>
+						<img src="img/html5.png" />
+						<aside class="notes">
+							So when I was asked to speak about HTML5 to the Five College Libraries' Digital Environment Development and Coordinating Committee (DEDCC) I decided to try Apple's Keynote. This was definitely a better tool. It suffers from weird little limitations of its own, but it tended to snap things to where I wanted them, put options where I expected them, and generally feel less frustrating. I had fun with the talk, and it looked better than anything else I'd done.
+						</aside>
+					</section>
+
+					<section data-transition="none">
 						<h2>HighEdWeb 2011</h2>
 						<h3>Swinging with Sinatra</h3>
-						<p>Powerpoint</p>
+						<p>Keynote</p>
+						<img src="img/sinatra.png"     class="fragment fade-out"  />
+						<img src="img/kernelpanic.png" class="fragment" style="position:relative; top:-492px;" />
 						<aside class="notes">
 							HighEdWeb 2011 was busy conference for me. I did too much. I volunteered for a few things (registration, band), I presented a poster, and I gave another 45-minute talk. This time I wanted to do something more dynamic and exciting, a live programming demonstration. As luck would have it it was a little more exciting than I would have liked, as my computer (yes, this very computer) let me down (core dump slide) mid stream. This proved a poplar diversion, and I got to repeat it two more times. One thing I promised myself was that next time I'd deliver a talk I could present in jeans.
 						</aside>
 					</section>
 
-					<section>
+					<section data-transition="none">
 						<h2>HighEdWeb 2012</h2>
-						<h3>You Can Convert!</h3>
+						<h3>I Can Convert!</h3>
+						<p>Keynote</p>
+						<img src="img/icanconvert1.png" class="fragment fade-out"  />
+						<img src="img/icanconvert2.png" class="fragment" style="position:relative; top:-492px;" />
+
 						<aside class="notes">
 							In 2012 Jason and I collaborated on a talk, and because we wanted it to look nice we used Keynote. Now this time the tool really got in the way. Jason knows a lot more about typography than I do, but I know Keynote better. Our collaboration consisted of sharing some notes, and then working on a single Keynote file in a shared Dropbox folder, being careful not to overwrite each others changes. We know each other well and we got through this ok but it was really the last straw.
+
+							I did wear jeans, though.
 						</aside>
 					</section>
 				</section>
@@ -119,12 +140,11 @@
 					<section>
 						<h2>Available Presentation Tools</h2>
 						<h3>(and their limitations)</h3>
-						<ol>
-							<li>Conventional (Powerpoint, Keynote)</li>
-							<li>Cloud-based (Google)</li>
-							<li>Flash-based (Prezi)</li>
-							<li>What about the web?</li>
-						</ol>
+						<ul>
+							<li class="fragment">Conventional (Powerpoint, Keynote)</li>
+							<li class="fragment">Cloud-based (Google)</li>
+							<li class="fragment">Flash-based (Prezi)</li>
+						</ul>
 						<aside class="notes">
 							Conventional presentation tools offer cryptic and shifting interfaces and little or no collaboration functionality.
 							Google's presentation tool offers much better collaboration support but limited presentational flexibility.
@@ -148,15 +168,8 @@
 					</section>
 
 					<section>
-						<h2>What About the Web?</h2>
-						<aside class="notes">
-							That main job, meanwhile, which had always been one kind of programming or another, had for years been web programming, and by this point for me that meant blue-beanie standards-based web programming, with CSS, yo.
-						</aside>
-					</section>
-
-					<section>
 						<h2>It turns out there are options.</h2>
-						<aside class="nodes">
+						<aside class="notes">
 							[Lacy's talk in 2012]
 							[That's what I'm going to do next time]
 						</aside>
@@ -165,39 +178,60 @@
 
 				<!-- Web-based Presentation Tools -->
 				<section>
-					<section>
+					<section data-transition="fade">
 						<h1>Web-based Presentation Tools</h1>
 					</section>
 
-					<section>
+					<section data-transition="fade">
 						<h2>The Basic Idea</h2>
 						<h3>HTML</h3>
-						<p>HTML is used to structure content and mark it up, often semantically</p>
+						<p>HTML is used to structure content and mark it up, <br/>often semantically</p>
 					</section>
 
-					<section>
+					<section data-transition="fade">
 						<h2>The Basic Idea</h2>
 						<h3>CSS</h3>
 						<p>CSS is used to provide presentation styling.</p>
 					</section>
 
-					<section>
+					<section data-transition="fade">
 						<h2>The Basic Idea</h2>
 						<h3>JavaScript</h3>
 						<p>JavaScript is used to add behavioral elements</p>
 					</section>
 
-					<section>
+					<section data-transition="fade">
 						<h2>Sound familiar?</h2>
 					</section>
 
-					<section>
-						<h2>What's New?</h2>
-						<h3>CSS2/3</h3>
+					<section data-transition="fade">
+						<h2>Opera Show</h2>
+						<ul>
+							<li>Presentation Mode</li>
+							<li>media: projection</li>
+							<li>XHTML and CSS</li>
+							<li>Opera Show Generator</li>
+						</ul>
+						<aside class="notes">
+							Around 2000 Opera introduced Opera Show
+
+							With a little CSS you could use the same XHTML for slide show, web, and printed handouts.
+
+							Cross-<em>platform</em>. But limited to Opera. Which you had to pay for.
+
+							In 2004 Opera released Opera Show Generator to allow presentations to be built without knowledge of web development.
+						</aside>
 					</section>
 
-					<section>
+					<section data-transition="fade">
 						<h2>Tantek Çelik</h2>
+						<img src="img/tantek.png"
+						<p><a href="http://tantek.com/presentations/2004sxsw/css.html">http://tantek.com/presentations/2004sxsw/css.html</a></p>
+						<aside class="notes">
+							Tantek Çelik built a slide show system for his own use.
+
+							Cross-browser. JavaScript. But requires manually-assigned IDs.
+						</aside>
 					</section>
 
 				</section>
@@ -211,6 +245,12 @@
 							<li>XHTML</li>
 							<li>XOXO</li>
 						</ul>
+						<p><a href="http://meyerweb.com/eric/tools/s5/">http://meyerweb.com/eric/tools/s5/</a></p>
+						<aside class="notes">
+							Eric Meyer's framework retains the things that are valuable about Tantek's, but uses JavaScript to assign IDs automatically, making things easier for the editor.
+
+							Still compatible with Opera Show. Also compatible with XOXO (Extensible Open XHTML Outlines microform).
+						</aside>
 					</section>
 
 					<section>
@@ -228,20 +268,15 @@
 						</ul>
 					</section>
 
-					<section>
-						<h2>S5</h2>
-						<h3>Eric Meyer</h3>
-						<ul>
-							<li>XHTML</li>
-							<li>XOXO</li>
-						</ul>
-					</section>
 				</section>
 
 				<!-- Deck.js -->
 				<section>
 					<section>
 						<h1>Deck.js</h1>
+						<h3>Caleb Troughton</h3>
+						<p><a href="https://github.com/imakewebthings/deck.js">https://github.com/imakewebthings/deck.js</a></p>
+						<small><a href="http://imakewebthings.github.com/deck.js/" target="_blank">Example</a></small>
 					</section>
 				</section>
 
@@ -249,6 +284,12 @@
 				<section>
 					<section>
 						<h1>Reveal.js</h1>
+						<h3>Hakim El Hattab</h3>
+						<p><a href="https://github.com/hakimel/reveal.js">https://github.com/hakimel/reveal.js</a></p>
+						<small><a href="http://lab.hakim.se/reveal-js/" target="_blank">Example</a></small>
+						<aside class="notes">
+							Reveal.js was built by Swedish user interface developer Hakim El Hattab. It has a smaller community than Deck.js, but in my personal opinion it offers a few advantages. You're looking at it now.
+						</aside>
 					</section>
 
 					<section>
@@ -259,16 +300,30 @@
 						<h2>Internal Links</h2>
 					</section>
 
-					<section>
-						<h2>Markdown</h2>
+					<section data-markdown>
+				    <script type="text/template">
+						##Markdown
+
+						This is markdown text right here.
+						</script>
 					</section>
 
 					<section>
 						<h2>Code Highlighting</h2>
+						<pre><code contenteditable>
+&lt;section&gt;
+	&lt;h2&gt;Code Highlighting&lt;/h2&gt;
+	&lt;pre&gt;&lt;code contenteditable&gt;
+		&lt;!-- Recursion here. Look away! --&gt;
+	&lt;/code&gt;&lt;/pre&gt;
+&lt;/section&gt;
+						</code></pre>
 					</section>
 
 					<section>
 						<h2>Overview</h2>
+						<p>10,000-foot view of your presentation.</p>
+						<div id="showoverview" class="fragment" />
 					</section>
 
 					<section>
@@ -475,10 +530,13 @@
 			// Full list of configuration options available here:
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
-				controls: true,
-				progress: true,
+				controls: false,
+				progress: false,
 				history: true,
 				center: true,
+
+				width: 1024,
+    		height: 768,
 
 				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
 				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
@@ -495,6 +553,12 @@
 					// { src: 'plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
 				]
 			});
+
+		Reveal.addEventListener( 'fragmentshown', function( event ) {
+			if (event.fragment.id == 'showoverview') {
+				Reveal.toggleOverview();
+			}
+		} );
 
 		</script>
 
