Heaing adjustments. Added manatee photo.

--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
 					<h1>How I Made This Presentation</h1>
 					<h3>Using the Tools of the Web <br/>to Present About It.</h3>
 					<p>
+						Sven Aas<br/>
 						<small>
-							Sven Aas<br/>
 							Lead Web Application Developer<br />
-							Mount Holyoke College<br/>
+							Mount Holyoke College<br />
 							<a href="http://twitter.com/svenaas">@svenaas</a>
 						</small>
+						<br/>
 					</p>
 					<p><a href="https://twitter.com/search/realtime?q=%23dpfl3">#dpfl3</a></p>
 					<aside class="notes">
@@ -94,8 +95,6 @@
 							I'd been presenting more back at home, though, mostly in PowerPoint, which I never liked much, and several times more recently in Google Presentations, including this example reporting some of the lessons learned at HighEdWeb 2010. As you know (or should) Google's tools offer a lot of advantages for collaboration.
 
 							But as nice as this tool is in various ways, it doesn't look great. It let you use the web, but in a lowest-common-denominator sort of way. It offers some conveniences but denies others.
-
-							So I tried Apple's Keynote. This was definitely a better tool. It suffers from weird little limitations of its own, but it tended to snap things to where I wanted them, put options where I expected them, and generally feel less frustrating. I had fun with the talk, and it looked better than anything else I'd done.
 						</aside>
 					</section>
 
@@ -116,7 +115,7 @@
 						<img src="img/sinatra.png"     class="fragment fade-out"  />
 						<img src="img/kernelpanic.png" class="fragment" style="position:relative; top:-492px;" />
 						<aside class="notes">
-							HighEdWeb 2011 was busy conference for me. I did too much. I volunteered for a few things (registration, band), I presented a poster, and I gave another 45-minute talk. This time I wanted to do something more dynamic and exciting, a live programming demonstration. As luck would have it it was a little more exciting than I would have liked, as my computer (yes, this very computer) let me down (core dump slide) mid stream. This proved a poplar diversion, and I got to repeat it two more times. One thing I promised myself was that next time I'd deliver a talk I could present in jeans.
+							HighEdWeb 2011 was a busy conference for me. I did too much. I volunteered for a few things (registration, band), I presented a poster, and I gave another 45-minute talk. This time I wanted to do something more dynamic and exciting, a live programming demonstration. As luck would have it it was a little more exciting than I would have liked, as my computer (yes, this very computer) let me down (core dump slide) mid stream. This proved a popular diversion, and I got to repeat it two more times. One thing I promised myself was that next time I'd deliver a talk I could present in jeans.
 						</aside>
 					</section>
 
@@ -128,7 +127,7 @@
 						<img src="img/icanconvert2.png" class="fragment" style="position:relative; top:-492px;" />
 
 						<aside class="notes">
-							In 2012 Jason and I collaborated on a talk, and because we wanted it to look nice we used Keynote. Now this time the tool really got in the way. Jason knows a lot more about typography than I do, but I know Keynote better. Our collaboration consisted of sharing some notes, and then working on a single Keynote file in a shared Dropbox folder, being careful not to overwrite each others changes. We know each other well and we got through this ok but it was really the last straw.
+							In 2012 Jason Proctor and I collaborated on a talk, and because we wanted it to look nice we used Keynote. Now this time the tool really got in the way. Jason knows a lot more about typography than I do, but I know Keynote better. Our collaboration consisted of sharing some notes, and then working on a single Keynote file in a shared Dropbox folder, being careful not to overwrite each other's changes. We know each other well and we got through this ok but it was really the last straw.
 
 							I did wear jeans, though.
 						</aside>
@@ -168,7 +167,7 @@
 					</section>
 
 					<section>
-						<h2>It turns out there are options.</h2>
+						<h2>It turns out <br/>there are options.</h2>
 						<aside class="notes">
 							[Lacy's talk in 2012]
 							[That's what I'm going to do next time]
@@ -228,7 +227,7 @@
 						<img src="img/tantek.png"
 						<p><a href="http://tantek.com/presentations/2004sxsw/css.html">http://tantek.com/presentations/2004sxsw/css.html</a></p>
 						<aside class="notes">
-							Tantek Çelik built a slide show system for his own use.
+							A few years later Tantek Çelik built a slide show system for his own use.
 
 							Cross-browser. JavaScript. But requires manually-assigned IDs.
 						</aside>
@@ -523,7 +522,14 @@
 				</section>
 
 				<section>
-						<img style="height: 100%" src="img/mind_pump.jpg" alt="Mind Pump">
+					<img style="height: 100%" src="img/mind_pump.jpg" alt="Mind Pump">
+					<aside class="notes">
+						Get better at CSS!
+					</aside>
+				</section>
+
+				<section>
+					<img style="height: 100%" src="img/manatee.png" alt="Mind Pump">
 				</section>
 
 				<section>
